# Dev_QtImgProcGuiApp

./: .gitignore  CMakeLists.txt  CMake_QtImgProcGuiApp_ja.JP.ts  README.md  common.h  defs.h  image_draw_scene-figure.h  image_draw_scene.cpp  image_draw_scene.h  image_draw_scene.hpp  image_draw_view.cpp  image_draw_view.h  image_draw_view.hpp  image_table_view.cpp  image_table_view.h  image_table_view.hpp  image_window.cpp  image_window.h  image_window.hpp  main.cpp  main_window.cpp  main_window.h  main_window.hpp  main_window.ui  pch.hpp
GuiApp/: CMakeLists.txt  GuiApp.cpp  GuiApp.h  camera_controller.cpp  camera_controller.h  camera_frame_reader.cpp  camera_frame_reader.h  common.h  defs.h  filter_dialog.cpp  filter_dialog.h  graphics_item.h  image_scene.cpp  image_scene.h  image_view.cpp  image_view.h  image_window.cpp  image_window.h  main.cpp  main_window.cpp  main_window.h  qt_custom_graphics_item.h  qt_defs.h  qt_util.h  utility.cpp  utility.h  utils.h
GuiApp/test/: CMakeLists.txt
GuiApp/test/directx12/: directx12_widget.cpp  dirextx12_main_window.hpp
GuiApp/ui/: FilterDialog.ui  ImageWindow.ui  MainWindow.ui
Is/: CMakeLists.txt
Is/include/IsCommon/: defs.hpp  exception.hpp  format_string.hpp  join_string.hpp  singleton_manager-internal.hpp  singleton_manager.hpp  split_string.hpp
Is/include/IsCommon/win32/: win32_api_error.hpp  win32_console.hpp
Is/src/IsCommon/: CMakeLists.txt
IsCommonLib/: CMakeLists.txt
IsCommonLib/include/: defs.hpp  exception.hpp  singleton_manager-internal.hpp  singleton_manager.hpp  time_measure.hpp
IsCommonLib/include/singleton/: singleton_manager-internal.hpp
IsCommonLib/include/win32/: win32_char_transform.hpp  win32_console.hpp
IsCommonLib/src/: exception.cpp  singleton_manager.cpp
IsCommonLib/src/singleton/: singleton_manager.cpp
IsCommonLib/src/win32/: win32_char_transform.cpp  win32_console.cpp
IsLibrary-main/: .gitignore  CMakeLists.txt  README.md
IsLibrary-main/include/IsComputerVision/: IsComputerVision-impl.hpp  IsComputerVision.hpp  common.hpp  saturate_cast.hpp  type-impl.hpp  type.hpp
IsLibrary-main/include/IsComputerVision/camera/: camera_controller.hpp  camera_frame_reader.hpp
IsLibrary-main/include/IsComputerVision/camera/general/: usb_camera_frame_reader.hpp
IsLibrary-main/include/IsComputerVision/filter/: blur.hpp  edge_detector.hpp
IsLibrary-main/include/IsComputerVision/filter/blur/: average.hpp  gaussian.hpp  median.hpp  mozic.hpp
IsLibrary-main/include/IsComputerVision/filter/edge_detector/: laplacian.hpp  log.hpp  sobel.hpp
IsLibrary-main/include/IsComputerVision/filter/utils/: utils_filter.hpp
IsLibrary-main/include/IsComputerVision/io/: bmp_policy.hpp  img_io.hpp  jpg_policy.hpp
IsLibrary-main/include/IsComputerVision/optical/: optical_params.hpp
IsLibrary-main/include/IsNdArray/: function_registry.hpp  nd_array_extra.hpp
IsLibrary-main/include/IsNdArray/function/: add2.hpp  bc_add2.hpp  broadcast.hpp  div2.hpp  mul2.hpp  mul_scalar.hpp  r_div_scalar.hpp  r_pow_scalar.hpp  r_sub_scalar.hpp  sub2.hpp
IsLibrary-main/include/IsNdArray/function/utils/: base_transform_binary.hpp  base_transform_unary.hpp
IsLibrary-main/src/IsCommon/: CMakeLists.txt
IsLibrary-main/src/IsCommon/win32/: win32_console.cpp
IsLibrary-main/src/IsComputerVision/: CMakeLists.txt
IsLibrary-main/src/IsComputerVision/camera/: camera_controller.cpp  camera_frame_reader.cpp
IsLibrary-main/src/IsComputerVision/camera/general/: usb_camera_frame_reader.cpp
IsLibrary-main/src/IsComputerVision/filter/: avg_filter.cpp  blur.cpp  edge_detector.cpp  gaussian_filter.cpp  laplacian_edge_detector.cpp  log_edge_detector.cpp  median_filter.cpp  mozic_filter.cpp  sobel_edge_detector.cpp
IsLibrary-main/src/IsComputerVision/filter/blur/: average.cpp  gaussian.cpp  median.cpp  mozic.cpp
IsLibrary-main/src/IsComputerVision/filter/edge_detector/: laplacian.cpp  log.cpp  sobel.cpp
IsLibrary-main/src/IsNdArray/: CMakeLists.txt  function.cpp  init.cpp
IsLibrary-main/src/IsNdArray/function/generic/: add2.cpp  arange.cpp  broadcast.cpp  max.cpp  mul_scalar.cpp  r_div_scalar.cpp  r_pow_scalar.cpp  r_sub_scalar.cpp
IsLibrary-main/test/: CMakeLists.txt  test_case.cmake  test_utils.hpp
IsLibrary-main/test/test_imgproc/: CMakeLists.txt  test_imgproc_blur.cpp  test_imgproc_edge_detector.cpp  test_imgproc_io.cpp  test_imgproc_padding.cpp
IsLibrary-main/test/test_nnabla/: CMakeLists.txt  TODO.txt  test_nnabla_core.cpp  test_nnabla_func.cpp
IsLibrary-main/test/test_nnabla/func/: CMakeLists.txt  test_nnabla_func_abs.cpp  test_nnabla_func_acos.cpp  test_nnabla_func_add2.cpp  test_nnabla_func_broadcast.cpp  test_nnabla_func_exp.cpp  test_nnabla_func_sin.cpp  test_nnabla_func_tan.cpp
IsLibrary/include/IsCommon/: IsCommon.hpp  singleton_manager-internal.hpp  tm.hpp
IsLibrary/src/IsCommon/: CMakeLists.txt
IsLibrary/src/IsCommon/win32/: win32_console.cpp
SandBox/: CMakeLists.txt
SandBox/QtDirectX12/: CMakeLists.txt  directx12_main_window.cpp  directx12_main_window.h  directx12_widget.cpp  directx12_widget.h
Test/: CMakeLists.txt
Test/DirectX12/: CMakeLists.txt  directx12_qt_gui.cpp  dirextx12_main_window.cpp
Test/DirectX12/directx12/: directx12_widget.hpp
Test/DirectX12/ui/: ui_DirectX12MainWindow.ui
build_tool/cmake/: download_third-party.cmake
include/: pch.h  pch.hpp
include/windows/: win_console.h  win_console.hpp  win_exception.h  win_exception.hpp
lib/: pch.cpp
lib/windows/: pch.cpp  win_console.cpp  win_exception.cpp
qt_gui_app/: CMakeLists.txt  image_scene.cpp  image_scene.h  image_view.h  image_window.cpp  image_window.h  main_window.cpp  main_window.h
qt_gui_app/ui/: ImageWindow.ui  MainWindow.ui
ui/: MainWindow.ui  main_window.ui  ui_main_window.hpp
windows/: win_console.cpp  win_console.hpp  win_exception.hpp
