cmake_minimum_required(VERSION 3.14.6)


###########################################
# sandbox -> QtDirectX12
###########################################
if(MSVC)
    add_subdirectory(QtDirectX12)
endif()


###########################################
# sandbox -> ???
###########################################